Final touches & bugfixes for closed alpha